wxc/include/ewxw/wxc_glue.h

void       wxRegion_Clear( TSelf(wxRegion) _obj );
TBool      wxRegion_ContainsPoint( TSelf(wxRegion) _obj, TPoint(x,y) );
TBool      wxRegion_ContainsRect( TSelf(wxRegion) _obj, TRect(x,y,width,height) );
TClass(wxRegion) wxRegion_CreateDefault(  );
TClass(wxRegion) wxRegion_CreateFromRect( TRect(x,y,w,h) );
void       wxRegion_Delete( TSelf(wxRegion) _obj );
int        wxRegion_Empty( TSelf(wxRegion) _obj );
void       wxRegion_GetBox( TSelf(wxRegion) _obj, TRectOutVoid(_x,_y,_w,_h) );
int        wxRegion_IntersectRect( TSelf(wxRegion) _obj, TRect(x,y,width,height) );
int        wxRegion_IntersectRegion( TSelf(wxRegion) _obj, TClass(wxRegion) region );
int        wxRegion_SubtractRect( TSelf(wxRegion) _obj, TRect(x,y,width,height) );
int        wxRegion_SubtractRegion( TSelf(wxRegion) _obj, TClass(wxRegion) region );
int        wxRegion_UnionRect( TSelf(wxRegion) _obj, TRect(x,y,width,height) );
int        wxRegion_UnionRegion( TSelf(wxRegion) _obj, TClass(wxRegion) region );
int        wxRegion_XorRect( TSelf(wxRegion) _obj, TRect(x,y,width,height) );
int        wxRegion_XorRegion( TSelf(wxRegion) _obj, TClass(wxRegion) region );